--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  geolocator: ^7.6.2
+  url_launcher: ^6.0.13
+
 
 
   # The following adds the Cupertino Icons font to your application.
